Ensure text in info boxes does not overlap icon

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -1069,7 +1069,7 @@ article .info-notice {
   article .info-notice h2 {
     font-family: nta, arial, sans-serif !important;
     margin-top: 0.5em; 
-    margin-right: 1em;
+    margin-right: 2em;
   }
 
 /* line 39, /mnt/jenkins/workspace/innovations-transactions-visualisation/web/app/assets/stylesheets/index.scss */
